--- a/config.gradle
+++ b/config.gradle
@@ -2,7 +2,7 @@ ext {
     android = [
             compileSdkVersion        : 26,
             buildToolsVersion        : "25.0.2",
-            minSdkVersion            : 15,
+            minSdkVersion            : 17,
             targetSdkVersion         : 22,
             versionCode              : 1,
             versionName              : "1.0",
@@ -23,7 +23,8 @@ ext {
             "rxjava2"             : 'io.reactivex.rxjava2:rxjava:2.0.1',
             "rxandroid"           : 'io.reactivex.rxjava2:rxandroid:2.0.1',
             "magicIndicator"      : 'com.github.hackware1993:MagicIndicator:1.5.0',
-            "refreshLayout"      : 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3',
+            "refreshLayout"       : 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3',
+            "anko"                : 'org.jetbrains.anko:anko-sdk15:0.9.1',
 
     ]
 }
