--- a/config.gradle
+++ b/config.gradle
@@ -1,22 +1,22 @@
 ext {
     android = [
-            compileSdkVersion        : 26,
-            buildToolsVersion        : "25.0.2",
+            compileSdkVersion        : 28,
+            buildToolsVersion        : "28.0.2",
             minSdkVersion            : 17,
-            targetSdkVersion         : 22,
+            targetSdkVersion         : 28,
             versionCode              : 1,
             versionName              : "1.0",
             applicationId            : "com.zbao.temptation",
-            testInstrumentationRunner: "android.support.test.runner.AndroidJUnitRunner"
+            testInstrumentationRunner: "androidx.test.runner.AndroidJUnitRunner"
     ]
 
     dependencies = [
-            "kotlin"              : "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version",
-            "constraint-layout"   : 'com.android.support.constraint:constraint-layout:1.0.2',
-            "butterknife"         : 'com.jakewharton:butterknife:8.8.1',
-            "support-appcompat-v7": 'com.android.support:appcompat-v7:26.1.0',
-            "support-multidex"    : 'com.android.support:multidex:1.0.1',
-            "support-v4"          : 'com.android.support:support-v4:24.1.1',
+            "kotlin"              : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50",
+            "constraint-layout"   : 'androidx.constraintlayout:constraintlayout:1.1.3',
+            "butterknife"         : 'com.jakewharton:butterknife:10.2.0',
+            "support-appcompat-v7": 'androidx.appcompat:appcompat:1.0.0',
+            "support-multidex"    : 'androidx.multidex:multidex:2.0.0',
+            "support-v4"          : 'androidx.legacy:legacy-support-v4:1.0.0',
             "retrofit2"           : 'com.squareup.retrofit2:retrofit:2.3.0',
             "baseAdapter"         : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.33',
             "arouter"             : 'com.alibaba:arouter-api:1.2.4',
